Jihu's Checkbox Commit

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -35,9 +35,10 @@ export const RightArrow = () => <svg
 
 <div className="sb-container">
   <div className='sb-section-title'>
-    # Configure your project
+    # Turtles' Design System
+    <h2>🐢팀 터틀스의 디자인 시스템입니다.🐢</h2>
 
-    Because Storybook works separately from your app, you'll need to configure it for your specific stack and setup. Below, explore guides for configuring Storybook with popular frameworks and tools. If you get stuck, learn how you can ask for help from our community.
+    
   </div>
   <div className="sb-section">
     <div className="sb-section-item">
